--- a/2_2/index.html
+++ b/2_2/index.html
@@ -7,7 +7,11 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>  <script>
   $(function(){
     // ここに処理を記述
-    
+    $('.button').on('click', function(event){
+		event.preventDefault();
+      $(this).siblings().removeClass('active');
+      $(this).toggleClass('active');
+    });
   });
   </script>
 </head>
