--- a/2_3/index.html
+++ b/2_3/index.html
@@ -4,15 +4,21 @@
   <meta charset="UTF-8">
   <title>アニメーション</title>
   <link rel="stylesheet" type="text/css" href="base.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>  <script>
-  $(function(){
-    // ここに処理を記述
-  });
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script>
+    $(function(){
+      $("#button").click(function() {
+        $(this).animate({
+            marginLeft: '500px',
+            marginTop: '300px'
+        }, 2000);
+      });
+    });
   </script>
 </head>
 <body>
-  <div id="button">
+  <button id="button">
     <p>button</p>
-  </div><!-- button -->
+  </button>
 </body>
 </html>
