--- a/2_4/index.html
+++ b/2_4/index.html
@@ -6,7 +6,10 @@
   <link rel="stylesheet" type="text/css" href="base.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>  <script>
   $(function(){
-    // ここに処理を記述
+    $("#button").on("click",function(){
+      var text=$("#value").val();
+      alert(text);
+    });
   });
   </script>
 </head>
