--- a/2_5/index.html
+++ b/2_5/index.html
@@ -6,8 +6,17 @@
   <link rel="stylesheet" type="text/css" href="base.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>  <script>
   $(function(){
-    // ここに処理を記述
-  });
+    $("#button").on("click", function () {
+    var v = $('input').val();
+    if(v==1){
+      $('#box').css('background-color','red');
+    } else if(v == 2) {
+      $('#box').css('background-color','green');
+    } else {
+      $('#box').css('background-color','blue');
+    }
+    });
+});
   </script>
 </head>
 <body>
